--- a/packages/web/src/app/doc-pages/other-pages/contribute/contribute.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/contribute/contribute.component.html
@@ -1,6 +1,6 @@
 <!--HEADER-->
 <app-component-header>
-  <ng-container ngProjectAs="headerTitle">Contribute to Elvis</ng-container>
+  <ng-container ngProjectAs="headerTitle">Contribute</ng-container>
   <ng-container ngProjectAs="headerDescription">
     {{ description }}
   </ng-container>
@@ -9,28 +9,11 @@
 <!--BODY-->
 <div class="page-body">
   <!--CONTRIBUTION MODEL-->
-  <app-component-subsection [sectionTitle]="'Contribution model'">
+  <app-component-subsection [sectionTitle]="'Feedback'">
     <ng-container ngProjectAs="sectionContent">
-      This model was made to help you know when to contact Elvis about potential new components for the design
-      system.
-      <div class="e-mt-40">
-        <div
-          class="e-content-loader e-w-100"
-          *ngIf="!loadedFigmaModel"
-          style="width: 880px; height: 600px"
-        ></div>
-        <iframe
-          [ngClass]="!loadedFigmaModel ? 'e-none' : ''"
-          id="figma-contribution-model"
-          style="border: none"
-          width="100%"
-          height="600"
-          src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FJuIBvdgEKqL0UZ6OGX7VUu%2FBidragsmodell%3Fnode-id%3D0%253A1"
-          allowfullscreen
-          (load)="hideContentLoader($event)"
-          title="Contribution model for the design system"
-        ></iframe>
-      </div>
+      Other than writing in our Slack channel you can use the "Give feedback" link, located in the top right
+      corner. This lik is on almost all our pages and is a quick and easy way to give us feedback. The
+      feedback will then be related to the page you where on when giving the feedback.
     </ng-container>
   </app-component-subsection>
 </div>
