--- a/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
@@ -100,6 +100,29 @@
           </div>
         </ng-container>
       </app-component-subsection>
+      <app-component-subsection [sectionTitle]="'Load more items'">
+        <ng-container ngProjectAs="sectionContent">
+          A button can be added to the bottom of the dropdown to load more items. When the button is clicked,
+          the
+          <span class="code-text">loadMoreItems</span>
+          event is emitted. The dropdown component does not handle the loading of more items, it is up to the
+          user to implement this functionality and update the
+          <span class="code-text">items</span>
+          prop. The button is hidden by default and can be shown by setting the
+          <span class="code-text">hasLoadMoreItemsButton</span>
+          prop to
+          <span class="code-text">true</span>
+          . When items are loading, the prop
+          <span class="code-text">isLoadingMoreItems</span>
+          should be set to
+          <span class="code-text">true</span>
+          . This will show a spinner in the button.
+          <app-component-example-generator
+            [componentData]="dropdownLoadMoreItemsCode"
+            [inlineExample]="true"
+          ></app-component-example-generator>
+        </ng-container>
+      </app-component-subsection>
     </ng-container>
   </app-component-section>
 
