change to do deprecate comments to deprecated

--- a/packages/elvis/src/components/divider.scss
+++ b/packages/elvis/src/components/divider.scss
@@ -1,7 +1,7 @@
 @use '../variables/colors';
 @use '../variables/typography';
 
-// TODO: Deprecate
+// DEPRECATED
 .e-divider {
   display: block;
   margin: 0;
