--- a/packages/elvis/src/components/dropdown.scss
+++ b/packages/elvis/src/components/dropdown.scss
@@ -7,7 +7,7 @@
 @use '../utilities/icons.scss';
 @use './autcomplete.scss';
 
-// TODO: Deprecate
+// DEPRECATED
 .e-dropdown {
   cursor: pointer;
   max-width: 448px;
