--- a/packages/elvis/src/components/modal.scss
+++ b/packages/elvis/src/components/modal.scss
@@ -10,7 +10,7 @@ $modal-desktop-padding: 48px;
 
 $modal-mobile-padding: 32px;
 
-// TODO: Deprecate
+// DEPRECATED
 .e-modal {
   display: flex;
   justify-content: center;
