--- a/packages/elvis/src/components/pagination.scss
+++ b/packages/elvis/src/components/pagination.scss
@@ -2,7 +2,7 @@
 @use '../variables/colors';
 @use '../utilities/helpers';
 
-// TODO: Deprecate
+// DEPRECATED
 .e-pagination {
   display: flex;
   flex-direction: row;
