--- a/packages/elvis/src/components/popover.scss
+++ b/packages/elvis/src/components/popover.scss
@@ -22,7 +22,7 @@ $popover-mobile-size: 300px;
   bottom: 0;
 }
 
-// TODO: Deprecate
+// DEPRECATED
 .e-popover {
   position: relative;
   display: inline-block;
