--- a/packages/elvis/src/components/progressbar.scss
+++ b/packages/elvis/src/components/progressbar.scss
@@ -1,7 +1,7 @@
 @use '../variables/colors';
 @use '../utilities/helpers';
 
-// TODO: Deprecate
+// DEPRECATED
 .e-progress {
   display: flex;
   width: 100%;
