--- a/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
@@ -104,7 +104,7 @@
         <ng-container ngProjectAs="sectionContent">
           A button can be added to the bottom of the dropdown to load more items. When the button is clicked,
           the
-          <span class="code-text">loadMoreItems</span>
+          <span class="code-text">onLoadMoreItems</span>
           event is emitted. The dropdown component does not handle the loading of more items, it is up to the
           user to implement this functionality and update the
           <span class="code-text">items</span>
