--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -9,21 +9,38 @@
       <p class="e-text-md">
         This is a text to test out the new
         <elvia-tooltip
-          message="Click the trigger to update the position on the fly!"
-          [position]="tooltipPosition"
-        >
-          <span slot="trigger" (click)="shuffleTooltipPosition()">tooltip!</span>
-        </elvia-tooltip>
+          content="This is a tooltip! The content is pretty long."
+          trigger="tooltip!"
+        ></elvia-tooltip>
       </p>
 
-      <elvia-datepicker
-        [value]="timepickerValue"
-        (valueOnChange)="timepickerValue = $event.target.value"
-      ></elvia-datepicker>
-      <elvia-timepicker
-        [value]="timepickerValue"
-        (valueOnChange)="timepickerValue = $event.target.value"
-      ></elvia-timepicker>
+      <elvia-tooltip
+        content="This tooltip has a trigger through a slot. Click the button to toggle the tooltip position."
+        [position]="tooltipPosition"
+      >
+        <button
+          slot="trigger"
+          (click)="shuffleTooltipPosition()"
+          class="e-btn e-btn--icon e-btn--lg"
+          aria-label="Vis tooltip"
+        >
+          <span class="e-btn__icon">
+            <i class="e-icon e-icon--star" aria-hidden="true"></i>
+          </span>
+        </button>
+      </elvia-tooltip>
+
+      <elvia-tooltip isDisabled="true" content="This should not be visible">
+        <span slot="trigger">Disabled tooltip</span>
+      </elvia-tooltip>
+
+      <elvia-tooltip>
+        <p slot="content" class="e-text-md e-m-0 e-flex e-align-items-center">
+          <i class="e-icon e-icon--search-bold e-icon--xs e-icon--color-white e-mr-8" aria-hidden="true"></i>
+          This is custom content!
+        </p>
+        <div slot="trigger">Tooltip trigger with custom content</div>
+      </elvia-tooltip>
     </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
