Lego-1898: dropdown last inn flere knapp (#974)
* add load more button to dropdown

* fix hover style and cursor

* fix load more items button hover state when loading

* fix modal multipage ceg example

* fix multiselect disabled option hover

* add dropdown load more items documentation

* qa, changelog date, fix yarn prettier:components

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,7 +5,7 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white e-flex e-flex-direction-column e-gap-16"></div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
