--- a/packages/web/src/app/doc-pages/components/table-doc/table-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/table-doc/table-doc.component.html
@@ -65,9 +65,7 @@
               last column will always be aligned to the right on phones.
               <app-component-example-v1
                 [codeHTML]="exampleMobile"
-                [showIframeScreens]="true"
-                [noTablet]="true"
-                [noDesktop]="true"
+                [isMobileExample]="true"
               ></app-component-example-v1>
             </ng-container>
           </app-component-subsubsection>
@@ -92,9 +90,7 @@
               last column will always be aligned to the right on phones.
               <app-component-example-v1
                 [codeHTML]="exampleCompactMobile"
-                [showIframeScreens]="true"
-                [noTablet]="true"
-                [noDesktop]="true"
+                [isMobileExample]="true"
               ></app-component-example-v1>
             </ng-container>
           </app-component-subsubsection>
@@ -211,9 +207,7 @@
               <ng-container ngProjectAs="sectionContent">
                 <app-component-example-v1
                   [codeHTML]="exampleButtonMobile"
-                  [showIframeScreens]="true"
-                  [noTablet]="true"
-                  [noDesktop]="true"
+                  [isMobileExample]="true"
                 ></app-component-example-v1>
               </ng-container>
             </app-component-subsubsection>
@@ -254,9 +248,7 @@
               <ng-container ngProjectAs="sectionContent">
                 <app-component-example-v1
                   [codeHTML]="exampleCheckboxMobile"
-                  [showIframeScreens]="true"
-                  [noTablet]="true"
-                  [noDesktop]="true"
+                  [isMobileExample]="true"
                   [interactable]="false"
                 ></app-component-example-v1>
               </ng-container>
@@ -298,9 +290,7 @@
               <ng-container ngProjectAs="sectionContent">
                 <app-component-example-v1
                   [codeHTML]="exampleInputMobile"
-                  [showIframeScreens]="true"
-                  [noTablet]="true"
-                  [noDesktop]="true"
+                  [isMobileExample]="true"
                 ></app-component-example-v1>
               </ng-container>
             </app-component-subsubsection>
@@ -423,9 +413,7 @@
               <ng-container ngProjectAs="sectionContent">
                 <app-component-example-v1
                   [codeHTML]="exampleSelectMobile"
-                  [showIframeScreens]="true"
-                  [noTablet]="true"
-                  [noDesktop]="true"
+                  [isMobileExample]="true"
                 ></app-component-example-v1>
               </ng-container>
             </app-component-subsubsection>
