--- a/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.html
@@ -335,10 +335,7 @@
                 </div>
                 <div class="e-accordion__content">
                   Use col-sm, col-md and col-lg to change grid at breakpoints.
-                  <app-component-example-v1
-                    [codeHTML]="example5"
-                    [showIframeScreens]="true"
-                  ></app-component-example-v1>
+                  <app-component-example-v1 [codeHTML]="example5"></app-component-example-v1>
                 </div>
               </div>
 
@@ -367,30 +364,21 @@
                   <app-component-subsubsection [sectionTitle]="'Alignment'">
                     <ng-container ngProjectAs="sectionContent">
                       Use justify-content, align-content, and offset to align col-classes inside grid.
-                      <app-component-example-v1
-                        [codeHTML]="example6"
-                        [showIframeScreens]="true"
-                      ></app-component-example-v1>
+                      <app-component-example-v1 [codeHTML]="example6"></app-component-example-v1>
                     </ng-container>
                   </app-component-subsubsection>
 
                   <app-component-subsubsection [sectionTitle]="'Ordering'">
                     <ng-container ngProjectAs="sectionContent">
                       Use order to choose the order of columns.
-                      <app-component-example-v1
-                        [codeHTML]="example7"
-                        [showIframeScreens]="true"
-                      ></app-component-example-v1>
+                      <app-component-example-v1 [codeHTML]="example7"></app-component-example-v1>
                     </ng-container>
                   </app-component-subsubsection>
 
                   <app-component-subsubsection [sectionTitle]="'Levels'">
                     <ng-container ngProjectAs="sectionContent">
                       The grid can have levels.
-                      <app-component-example-v1
-                        [codeHTML]="example8"
-                        [showIframeScreens]="true"
-                      ></app-component-example-v1>
+                      <app-component-example-v1 [codeHTML]="example8"></app-component-example-v1>
                     </ng-container>
                   </app-component-subsubsection>
                 </div>
@@ -414,19 +402,13 @@
 
                   <app-component-subsubsection [sectionTitle]="'External gutters'">
                     <ng-container ngProjectAs="sectionContent">
-                      <app-component-example-v1
-                        [codeHTML]="exampleGutterExternal"
-                        [showIframeScreens]="true"
-                      ></app-component-example-v1>
+                      <app-component-example-v1 [codeHTML]="exampleGutterExternal"></app-component-example-v1>
                     </ng-container>
                   </app-component-subsubsection>
 
                   <app-component-subsubsection [sectionTitle]="'Internal gutters'">
                     <ng-container ngProjectAs="sectionContent">
-                      <app-component-example-v1
-                        [codeHTML]="exampleGutterInternal"
-                        [showIframeScreens]="true"
-                      ></app-component-example-v1>
+                      <app-component-example-v1 [codeHTML]="exampleGutterInternal"></app-component-example-v1>
                     </ng-container>
                   </app-component-subsubsection>
 
@@ -434,20 +416,14 @@
                     <ng-container ngProjectAs="sectionContent">
                       Combine the padding classes (e.g. px-lg-3) and negative margin classes (e.g. mx-lg-n3 )
                       to add your own custom gutters.
-                      <app-component-example-v1
-                        [codeHTML]="example3"
-                        [showIframeScreens]="true"
-                      ></app-component-example-v1>
+                      <app-component-example-v1 [codeHTML]="example3"></app-component-example-v1>
                     </ng-container>
                   </app-component-subsubsection>
 
                   <app-component-subsubsection [sectionTitle]="'No gutters'">
                     <ng-container ngProjectAs="sectionContent">
                       Use no-gutters to remove gutters on the row.
-                      <app-component-example-v1
-                        [codeHTML]="example4"
-                        [showIframeScreens]="true"
-                      ></app-component-example-v1>
+                      <app-component-example-v1 [codeHTML]="example4"></app-component-example-v1>
                     </ng-container>
                   </app-component-subsubsection>
                 </div>
@@ -469,18 +445,12 @@
                   </div>
                   <app-component-subsubsection [sectionTitle]="'External margin'">
                     <ng-container ngProjectAs="sectionContent">
-                      <app-component-example-v1
-                        [codeHTML]="exampleExternalMargin"
-                        [showIframeScreens]="true"
-                      ></app-component-example-v1>
+                      <app-component-example-v1 [codeHTML]="exampleExternalMargin"></app-component-example-v1>
                     </ng-container>
                   </app-component-subsubsection>
                   <app-component-subsubsection [sectionTitle]="'Internal margin'">
                     <ng-container ngProjectAs="sectionContent">
-                      <app-component-example-v1
-                        [codeHTML]="exampleInternalMargin"
-                        [showIframeScreens]="true"
-                      ></app-component-example-v1>
+                      <app-component-example-v1 [codeHTML]="exampleInternalMargin"></app-component-example-v1>
                     </ng-container>
                   </app-component-subsubsection>
                 </div>
