--- a/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
+++ b/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
@@ -225,25 +225,13 @@
             NB: Remember to make the global alert fixed to the top of your application and make sure that it
             extends the full length of the page!
           </p>
-          <app-component-example-v1
-            [codeHTML]="globalAlert"
-            [showIframeScreens]="true"
-            [noTablet]="true"
-            [overwriteHeight]="104"
-            [noPaddingX]="true"
-          ></app-component-example-v1>
+          <app-component-example-v1 [codeHTML]="globalAlert"></app-component-example-v1>
           <app-when-to-use [whens]="doesGlobalDefault" [whenNots]="dontsGlobalDefault"></app-when-to-use>
 
           <app-component-subsubsection [sectionTitle]="'Closable'">
             <ng-container ngProjectAs="sectionContent">
               Global alerts can also have a close button.
-              <app-component-example-v1
-                [codeHTML]="globalAlertCloseable"
-                [showIframeScreens]="true"
-                [noTablet]="true"
-                [overwriteHeight]="104"
-                [noPaddingX]="true"
-              ></app-component-example-v1>
+              <app-component-example-v1 [codeHTML]="globalAlertCloseable"></app-component-example-v1>
             </ng-container>
           </app-component-subsubsection>
           <app-component-subsubsection [sectionTitle]="'Expandable'">
@@ -253,35 +241,18 @@
                 e-alert--open
               </span>
               to open and close the alert.
-              <app-component-example-v1
-                [codeHTML]="globalAlertExpandable"
-                [showIframeScreens]="true"
-                [noTablet]="true"
-                [noPaddingX]="true"
-              ></app-component-example-v1>
+              <app-component-example-v1 [codeHTML]="globalAlertExpandable"></app-component-example-v1>
             </ng-container>
           </app-component-subsubsection>
           <app-component-subsubsection [sectionTitle]="'Actions'">
             <ng-container ngProjectAs="sectionContent">
               Global alerts can also have actions.
-              <app-component-example-v1
-                [codeHTML]="globalAlertActions"
-                [showIframeScreens]="true"
-                [noTablet]="true"
-                [overwriteHeight]="110"
-                [noPaddingX]="true"
-              ></app-component-example-v1>
+              <app-component-example-v1 [codeHTML]="globalAlertActions"></app-component-example-v1>
             </ng-container>
           </app-component-subsubsection>
           <app-component-subsubsection [sectionTitle]="'Without title'">
             <ng-container ngProjectAs="sectionContent">
-              <app-component-example-v1
-                [codeHTML]="globalAlertNoTitle"
-                [showIframeScreens]="true"
-                [noTablet]="true"
-                [overwriteHeight]="110"
-                [noPaddingX]="true"
-              ></app-component-example-v1>
+              <app-component-example-v1 [codeHTML]="globalAlertNoTitle"></app-component-example-v1>
             </ng-container>
           </app-component-subsubsection>
         </ng-container>
@@ -292,26 +263,12 @@
           Local alerts are messages related to the site and the content. It can be placed anywhere between the
           header and footer, but close to the content it is related to. Local messages can also be used for
           feedback after a user actions. The maximum width is 850px.
-          <app-component-example-v1
-            [codeHTML]="exampleAlertDefault"
-            [showIframeScreens]="true"
-            [noTablet]="true"
-          ></app-component-example-v1>
+          <app-component-example-v1 [codeHTML]="exampleAlertDefault"></app-component-example-v1>
           <app-when-to-use [whens]="doesAlertDefault"></app-when-to-use>
 
-          <!-- Venter til design har sett på behov for denne 
-          <app-component-subsubsection [sectionTitle]="'Closable'">
-            <ng-container ngProjectAs="sectionContent">
-              <app-component-example-v1 [codeHTML]="localAlertClosable" [showIframeScreens]="true" [noTablet]="true"></app-component-example-v1>
-            </ng-container>
-          </app-component-subsubsection> -->
           <app-component-subsubsection [sectionTitle]="'Without title'">
             <ng-container ngProjectAs="sectionContent">
-              <app-component-example-v1
-                [codeHTML]="localAlertNoTitle"
-                [showIframeScreens]="true"
-                [noTablet]="true"
-              ></app-component-example-v1>
+              <app-component-example-v1 [codeHTML]="localAlertNoTitle"></app-component-example-v1>
             </ng-container>
           </app-component-subsubsection>
         </ng-container>
