--- a/packages/web/src/app/shell/header/header.component.scss
+++ b/packages/web/src/app/shell/header/header.component.scss
@@ -1,4 +1,4 @@
-@import '../../shared/shared-sizes';
+@import '../../shared/shared-sizes.scss';
 @import '@elvia/elvis/src/utilities/breakpoints.scss';
 
 .header {
